# Deform

./: .clangd  .gitignore  Build.ps1  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Cargo.toml  Deform Engine.vcxproj  Deform Engine.vcxproj.filters  Launch.ps1  README.md  imgui.ini
.zed/: debug.json
ColorPicker/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Color4Picker.h  Colorpicker.sln  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
ColorPicker/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
ColorPicker/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
ColorPicker/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
ColorPicker/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Editor/: .gitignore  CMakeLists.txt
Editor/src/: Editor.h  main.cpp
Engine/: CMakeLists.txt  Cargo.toml
Engine/src/: Engine.h
Engine/src/Engine/: EngineAPI.h
Engine/src/Engine/core/: logger.cpp
Engine/src/Engine/core/Object/: Object.cpp  Object.h  Vector.h
Engine/src/Engine/core/maths/vector/: Vector.cpp  Vector.h
Engine/src/Engine/core/render/: IRenderer.h
Engine/src/Engine/core/render/d3d11/: DXRender.cpp  DXRender.h
Engine/src/Engine/core/render/opengl/: GLRender.cpp  GLRender.h
Engine/src/Engine/core/render/vulkan/: VKRender.cpp  VKRender.h
Engine/src/Engine/core/scene/: scene.cpp  scene.h
Engine/src/Engine/graphics/: Window.cpp  Window.h
Engine/src/engine/: engine_api.rs
Engine/src/engine/core/maths/: vector.rs
Engine/src/engine/core/object/: object.rs
Engine/src/engine/core/render/: mod.rs
Engine/src/engine/core/render/d3d11/: mod.rs
Engine/src/engine/graphics/: window.rs
deform-editor/: Cargo.toml
deform-editor/src/: main.rs
deform_core/: Cargo.toml
deform_core/src/: lib.rs
deform_core/src/engine/: mod.rs
deform_core/src/engine/core/: logger.rs  mod.rs
deform_core/src/engine/core/render/d3d11/: dx_render.rs
deform_core/src/engine/core/render/opengl/: gl_render.rs  mod.rs
deform_core/src/engine/core/render/vulkan/: mod.rs  vk_render.rs
deform_core/src/logger/: mod.rs
deform_core/src/render/: mod.rs
deform_core/src/scene/: mod.rs
deform_editor/: Cargo.toml
deform_editor/src/: main.rs
editor/src/: app.rs
src/: Engine.h  config.h  lib.rs  main.cpp
src/Editor/: Editor.h
src/Editor/src/EditorUIComponents/: Console.cpp  Hierarchy.cpp  Inspector.cpp  MainMenuBar.cpp
src/Engine/core/: logger.cpp
src/Engine/core/render/d3d11/: DXRender.cpp  DXRender.h
src/Engine/core/render/opengl/: GLRender.cpp  GLRender.h
src/Engine/graphics/: Window.h
src/core/Object/: Object.cpp  Object.h
src/core/maths/vector/: Vector.h
src/core/render/: render.cpp
src/core/render/d3d11/: DXRender.cpp  DXRender.h
src/core/render/opengl/: GLRender.cpp  GLRender.h
src/core/scene/: scene.cpp  scene.h
src/engine/core/render/: i_renderer.rs
src/engine/core/scene/: scene.rs
src/engine/graphics/: window.rs
src/graphics/: Window.cpp  Window.h
src/win32/window/: Window.cpp  Window.h
